# cursor-heatmap-trail

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
app/: main.html
app/about/: about.css  about.html  about.js
app/css/: main.css
app/js/: main.js
src/: main.rs
