[package]
name = "cursor-heatmap-trail"
version = "0.1.1"
authors = ["GirkovArpa <girkovarpa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "*"
winput = "0.2.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "cursor-heatmap-trail.exe"
LegalCopyright = "Copyright © 2021 Girkov Arpa"
FileDescription = "Cursor Heatmap Trail"
ProductName = "Cursor Heatmap Trail"
ProductVersion = "0.1.0"